package com.zhouruxuan.structural.bridge.demo2;

public interface Remote {
    void power();

    void volumeDown();

    void volumeUp();

    void channelDown();

    void channelUp();
}