@startuml
class com.zhouruxuan.structural.bridge.demo2.Radio {
- boolean on
- int volume
- int channel
+ boolean isEnabled()
+ void enable()
+ void disable()
+ int getVolume()
+ void setVolume(int)
+ int getChannel()
+ void setChannel(int)
+ void printStatus()
}
class com.zhouruxuan.structural.bridge.demo2.BasicRemote {
# Device device
+ void power()
+ void volumeDown()
+ void volumeUp()
+ void channelDown()
+ void channelUp()
}
class com.zhouruxuan.structural.bridge.demo2.Demo {
+ {static} void main(String[])
+ {static} void testDevice(Device)
}
class com.zhouruxuan.structural.bridge.demo2.Tv {
- boolean on
- int volume
- int channel
+ boolean isEnabled()
+ void enable()
+ void disable()
+ int getVolume()
+ void setVolume(int)
+ int getChannel()
+ void setChannel(int)
+ void printStatus()
}
interface com.zhouruxuan.structural.bridge.demo2.Device {
~ boolean isEnabled()
~ void enable()
~ void disable()
~ int getVolume()
~ void setVolume(int)
~ int getChannel()
~ void setChannel(int)
~ void printStatus()
}
interface com.zhouruxuan.structural.bridge.demo2.Remote {
~ void power()
~ void volumeDown()
~ void volumeUp()
~ void channelDown()
~ void channelUp()
}
class com.zhouruxuan.structural.bridge.demo2.AdvancedRemote {
+ void mute()
}


com.zhouruxuan.structural.bridge.demo2.Device <|.. com.zhouruxuan.structural.bridge.demo2.Radio
com.zhouruxuan.structural.bridge.demo2.Remote <|.. com.zhouruxuan.structural.bridge.demo2.BasicRemote
com.zhouruxuan.structural.bridge.demo2.Device <|.. com.zhouruxuan.structural.bridge.demo2.Tv
com.zhouruxuan.structural.bridge.demo2.BasicRemote <|-- com.zhouruxuan.structural.bridge.demo2.AdvancedRemote : 继承
com.zhouruxuan.structural.bridge.demo2.BasicRemote --> "1" com.zhouruxuan.structural.bridge.demo2.Device : 依赖

@enduml